Fix bugs styles on mobile

--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -11,3 +11,36 @@ header{
     font-size: 0.7rem;
     padding: 0.3rem;
 }
+
+
+/* modal add task */
+
+.modalcontainer .modalTask{
+    width: 50%;
+}
+.modalcontainer .modalTask .taskName{
+    margin: 1rem;
+    vertical-align: middle;
+    height: 1rem;
+    width: 100%;
+}
+.modalcontainer .modalTask .addNewTask{
+    width: 30%;
+}
+
+/* modal delete all tasks */
+.modalTaskDelete{
+    background-color: var(--third-color_dark);
+    position: relative;
+    width: 50%;
+    max-height: 300px;
+    border-radius: 0.3rem;
+    padding: 1.5rem;
+    text-align: center;
+}
+
+.btnsContainer .buttonStyle{
+    margin: 0 1rem;
+    margin-top: 1rem;
+    padding: 0.8rem 3rem;
+}
