--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -154,10 +154,10 @@ h1{
 }
 .modalcontainer .modalTask{
     background-color: var(--third-color_dark);
-    width: 50%;
+    width: 94%;
     max-height: 300px;
     border-radius: 0.3rem;
-    padding: 2rem;
+    padding: 0.5rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -166,13 +166,12 @@ h1{
     position: relative;
 }
 .modalcontainer .modalTask .taskName{
-    margin: 1rem;
-    vertical-align: middle;
-    height: 1rem;
-    width: 50%;
+    margin: 0.5rem 0;
+    height: 1.2rem;
+    width: 100%;
 }
 .modalcontainer .modalTask .addNewTask{
-    width: 30%;
+    width: 50%;
 }
 .task i.trashTask{
     position: absolute;
@@ -206,17 +205,17 @@ h1{
 .modalTaskDelete{
     background-color: var(--third-color_dark);
     position: relative;
-    width: 50%;
-    max-height: 300px;
+    width: 94%;
+    max-height: 200px;
     border-radius: 0.3rem;
-    padding: 1.5rem;
+    padding: 0.5rem;
     text-align: center;
 }
 
 .btnsContainer .buttonStyle{
-    margin: 0 1rem;
-    margin-top: 1rem;
-    padding: 0.5rem 2rem;
+    margin: 0 0.5rem;
+    margin-top: 0.5rem;
+    padding: 0.5rem 1rem;
 }
 
 /* Task ready */
